ec2-ami/ec2-launch-from-ami.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Launch an EC2 instance in the default VPC.

Parameters:
  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Name of an existing EC2 KeyPair.
  InstanceType:
    Type: String
    Default: t3.micro
    Description: EC2 instance type.
  SubnetId:
    Type: AWS::EC2::Subnet::Id
    Description: Subnet ID in the default VPC.
  VpcId:
    Type: AWS::EC2::VPC::Id
    Description: VPC ID for the security group.
  AMIId:
    Type: AWS::EC2::Image::Id
    Description: AMI ID to launch the instance from.

Resources:
  EC2InstanceRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/CloudWatchAgentServerPolicy

  InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - !Ref EC2InstanceRole
  InstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH and HTTP access
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: !Ref InstanceType
      KeyName: !Ref KeyName
      SubnetId: !Ref SubnetId
      ImageId: !Ref AMIId
      IamInstanceProfile: !Ref InstanceProfile
      SecurityGroupIds:
        - !Ref InstanceSecurityGroup
      Tags:
        - Key: Name
          Value: AMIBasedEC2Instance

Outputs:
  InstanceId:
    Description: The ID of the launched EC2 instance
    Value: !Ref EC2Instance
  PublicIP:
    Description: Public IP address of the EC2 instance
    Value: !GetAtt EC2Instance.PublicIp
  LogGroupName:
    Description: CloudWatch Log Group Name for the instance
    Value: !Sub "/ec2/EC2PlaygroundInstance/${EC2Instance}"
